# kcud

./: README.md  meson.build  meson_options.txt  run.sh
benchmarks/: regex_filter_duckdb.cpp  regex_filter_duckdb.py  regex_filter_re2.cpp  time_regex.py
src/: common.hpp  compile.sh  diff.py  dump.txt  interface.cpp  interface.h  main.cpp  meson.build  out.txt  out2.txt  regduck_api.cpp  regduck_api.hpp  run.sh
src/block/: metadata_block.cpp  storage_block.cpp
src/database/: database.cpp
src/header/: database_header.cpp  main_header.cpp
src/include/block/: metadata_block.hpp  storage_block.hpp
src/include/database/: database.hpp
src/include/decoder/: decoder.cpp
src/include/header/: database_header.hpp  main_header.hpp
src/include/hyperloglog/: hyperloglog.hpp
src/include/reader/: reader.hpp
src/include/row_group/: row_group.hpp
src/include/statistics/: base_statistics.hpp  distinct_statistics.hpp  string_statistics.hpp
src/include/table/: table.hpp
src/include/type_info/: type_info.hpp
src/parser/: common.hpp
src/parser/block/: metadata_block.cpp  storage_block.cpp
src/parser/database/: database.bak  database.cpp
src/parser/header/: database_header.cpp  main_header.cpp
src/parser/include/block/: storage_block.hpp
src/parser/include/database/: database.hpp
src/parser/include/decoder/: decoder.cpp  decoder.hpp
src/parser/include/header/: database_header.hpp  main_header.hpp
src/parser/include/hyperloglog/: hyperloglog.hpp
src/parser/include/reader/: reader 2.hpp  reader.hpp
src/parser/include/row_group/: row_group.hpp
src/parser/include/schema/: schema.hpp
src/parser/include/statistics/: base_statistics.hpp  distinct_statistics.hpp
src/parser/include/table/: table.hpp
src/parser/include/type_info/: type_info.hpp
src/parser/statistics/: base_statistics.cpp  distinct_statistics.cpp
src/parser/table/: table.cpp
src/parser/type_info/: type_info.cpp
src/regex/: regex.hpp
src/regex/duckdb_regex/: regex.cpp  regex.hpp
src/regex/re2_regex/: meson.build
src/row_group/: row_group.cpp
src/schema/: schema.cpp
src/statistics/: base_statistics.cpp  distinct_statistics.cpp
src/table/: table.cpp
src/type_info/: type_info.cpp
test/: test_conn.cpp
